# easy_barter

./: .env.example  .gitignore  README.md  env_config.py  manage.py  pyproject.toml
ads/: admin.py  forms.py  models.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_exchangeproposal.py
ads/templates/ads/: ad_confirm_delete.html  ad_detail.html  ad_form.html  base.html  confirm_accept.html  list_ads.html  list_proposals.html  proposal_form.html
ads/templates/ads/includes/: header.html  paginator.html
ads/tests/: test_models.py  test_views.py
easy_barter/: asgi.py  settings.py  urls.py  wsgi.py
