[tool.poetry]
name = "easy-barter"
version = "0.1.0"
description = ""
authors = ["Iaroslav Voroshilov <frqhero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
pydantic-settings = "^2.9.1"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
